fix the swagger issue
